/*
Copyright (C) 2011 by NetCapital LLC

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
*/

package com.netcapital.thebouncer.protocol;

message ClientHandshake {
  optional string platform = 1;
  optional string udid = 2;
  optional string uuid = 3;
  optional string username = 4;
  required string hashedpassword = 5;
  required uint32 version = 6;
  required bool new_user = 7;
}

message ServerHandshakeResponse {
  optional bool authenticated = 1;
  optional string failure_reason = 2;
  required bool force_update = 3;
  optional string force_update_reason = 4;
  optional string alert_message = 5;
}

message NormalMessage {
  enum Type {
    PING = 4;
    PONG = 5;
    JSON = 6;
  }

  required Type type = 1;
  optional uint32 msg_id = 2;
  optional Ping ping = 3;
  optional Pong pong = 4;
  optional string jsonData = 5;
}

message Ping {
  required uint64 timestamp_utc = 1;
  optional uint32 ping_id = 2;
}

message Pong {
  required uint32 receive_delta = 1;
  required uint64 timestamp_utc = 2;
  optional uint32 ping_id = 3;
}
